k8s/prices-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prices-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: prices
  template:
    metadata:
      labels:
        component: prices
    spec:
      containers:
        - name: prices
          image: daniellin9406/price-dashboard_prices
          ports:
            - containerPort: 5000
