k8s/promotions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotions-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: promotions
  template:
    metadata:
      labels:
        component: promotions
    spec:
      containers:
        - name: promotions
          image: daniellin9406/price-dashboard_promotions
          ports:
            - containerPort: 5001
