k8s/upgrade-rules-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upgrade-rules-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: upgrade-rules
  template:
    metadata:
      labels:
        component: upgrade-rules
    spec:
      containers:
        - name: upgrade-rules
          image: daniellin9406/price-dashboard_upgrade-rules
          ports:
            - containerPort: 5002
