k8s/prices-cluster-ip-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: prices-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: prices
  ports:
    - port: 5000
      targetPort: 5000
